check-mk/rbac.yaml
# This file should be applied on the Kubernetes Clusters that we want to monitor
# Then we should get the SA Certificate and Token and import it into the CheckMK via Browser
# For more information, go to https://docs.checkmk.com/latest/en/monitoring_kubernetes.html
---
apiVersion: v1
kind: Namespace
metadata:
  name: check-mk
