check-mk/svc.yaml
# For testing from outside the cluster, execute "kubectl port-forward service/check-mk 5000:5000" 
apiVersion: v1
kind: Service
metadata:
  name: check-mk
  namespace: check-mk
spec:
  type: ClusterIP
  ports:
  - targetPort: 5000
    port: 5000
  selector:
    app: check-mk
